Feat(#16) 프로젝트 조회, 생성 완료