@@ -1,7 +1,8 @@
 package com.lec.spring.domains.project.service;
 
+import com.lec.spring.domains.portfolio.service.PortfolioService;
+import com.lec.spring.domains.project.dto.ProjectCreatDTO;
 import com.lec.spring.domains.project.dto.ProjectDTO;
-import com.lec.spring.domains.project.dto.ProjectStacksDTO;
 import com.lec.spring.domains.project.entity.*;
 import com.lec.spring.domains.project.repository.ProjectMemberRepository;
 import com.lec.spring.domains.project.repository.ProjectRepository;
@@ -10,13 +11,13 @@ import com.lec.spring.domains.stack.entity.Stack;
 import com.lec.spring.domains.stack.repository.StackRepository;
 import com.lec.spring.domains.user.entity.User;
 import com.lec.spring.domains.user.repository.UserRepository;
+import com.lec.spring.global.common.entity.Position;
 import lombok.RequiredArgsConstructor;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
-import java.util.List;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -28,25 +29,93 @@ public class ProjectServiceImpl implements ProjectService {
     private final ProjectStacksRepository projectStacksRepository;
     private final ProjectMemberRepository projectMemberRepository;
     private final UserRepository userRepository;
+    private final PortfolioService portfolioService;
+
+
+    @Override
+    public ProjectDTO createProject(Long userId, ProjectCreatDTO projectCreateDTO) {
+
+        Project project = Project.builder()
+                .name(projectCreateDTO.getName())
+                .period(projectCreateDTO.getPeriod())
+                .startDate(projectCreateDTO.getStartDate())
+                .status(ProjectStatus.BOARDING)  // 기본값 설정
+                .build();
+
+        Project savedProject = projectRepository.save(project);
+
+
+        List<Stack> stacks = stackRepository.findAllById(projectCreateDTO.getStacks());
+        List<ProjectStacks> projectStacksList = stacks.stream()
+                .map(stack -> new ProjectStacks(null, stack, savedProject.getId()))
+                .toList();
+
+        projectStacksRepository.saveAll(projectStacksList);
+
+
+        ProjectMember projectMember = ProjectMember.builder()
+                .project(savedProject)
+                .userId(userId)
+                .authority(ProjectMemberAuthirity.CAPTAIN)
+                .status(ProjectMemberStatus.APPROVE)
+                .position(Position.valueOf(projectCreateDTO.getPosition()))
+                .build();
+
+        projectMemberRepository.save(projectMember);
+
+
+        portfolioService.createPortfolioForProject(savedProject, userId, stacks);
+
+        return ProjectDTO.fromEntityWithMember(savedProject, projectMember);
+    }
 
 
     @Override
     public List<ProjectDTO> getUserProjectsWithStacks() {
         Long loggedInUserId = getLoggedInUserId();
+        List<Long> projectIds = new ArrayList<>();
+        List<ProjectMemberAuthirity> authorities = new ArrayList<>(extractProjectAuthorities(loggedInUserId, projectIds));
 
-        return projectRepository.findProjectsByUserIdAndAuthorityWithStacksQueryDSL(loggedInUserId)
-                .stream().map(ProjectDTO::fromEntity).collect(Collectors.toList());
+        authorities.removeIf(auth -> auth != ProjectMemberAuthirity.CAPTAIN && auth != ProjectMemberAuthirity.CREW);
+        if (authorities.isEmpty()) return new ArrayList<>();
+
+        List<Project> projects = projectRepository.findProjectsByUserIdAndAuthorities(loggedInUserId, projectIds, authorities, 0);
+
+
+        return projects.stream()
+                .map(project -> {
+                    ProjectMember projectMember = projectMemberRepository.findByProjectAndUserId(project, loggedInUserId);
+                    return ProjectDTO.fromEntityWithMember(project, projectMember);
+                })
+                .toList();
     }
+
 
     @Override
     public List<ProjectDTO> getUserProjectsWithLimitAndStacks(int row) {
-        Long loggedInUserId = getLoggedInUserId(); // ✅ 현재 로그인한 사용자 ID 가져오기
+        Long loggedInUserId = getLoggedInUserId();
+        List<Long> projectIds = new ArrayList<>();
+        List<ProjectMemberAuthirity> authorities = new ArrayList<>(extractProjectAuthorities(loggedInUserId, projectIds));
 
-        return projectRepository.findProjectsByUserIdAndAuthorities(loggedInUserId, row)
-                .stream().map(ProjectDTO::fromEntity).collect(Collectors.toList());
+
+
+        if (authorities.isEmpty()) return new ArrayList<>();
+
+
+        List<Project> projects = projectRepository.findProjectsByUserIdAndAuthorities(loggedInUserId, projectIds, authorities, row);
+
+
+        return projects.stream()
+                .map(project -> {
+                    ProjectMember projectMember = projectMemberRepository.findByProjectAndUserId(project, loggedInUserId);
+                    return ProjectDTO.fromEntityWithMember(project, projectMember);
+                })
+                .toList();
     }
 
-    // CREW, WAITING 권한을 가진 프로젝트 반환
+
+
+
     @Override
     public List<ProjectDTO> getUserRecruitmentProjects() {
         Long loggedInUserId = getLoggedInUserId();
@@ -54,46 +123,7 @@ public class ProjectServiceImpl implements ProjectService {
         return projectRepository.findRecruitmentProjectsByUserId(loggedInUserId)
                 .stream()
                 .map(ProjectDTO::fromEntity)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public ProjectDTO createProject(ProjectDTO projectDTO) {
-        Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
-        Long userId = Long.parseLong(authentication.getName());
-
-        // ProjectDTO를 Project 엔티티로 변환
-        Project project = ProjectDTO.toEntity(projectDTO);
-
-        // 프로젝트 저장
-        Project savedProject = projectRepository.save(project);
-
-        // stackIds로 스택 정보 조회 (ProjectDTO에서 stackIds를 가져옴)
-        List<Long> stackIds = projectDTO.getStacks().stream()
-                .map(ProjectStacksDTO::getProjectId) // ProjectStacksDTO에서 stackId를 추출
-                .collect(Collectors.toList());
-
-        // stackIds로 Stack 엔티티들 조회
-        List<Stack> stacks = stackRepository.findAllById(stackIds);
-
-        // ProjectStacks 객체 생성 후 저장
-        for (Stack stack : stacks) {
-            ProjectStacks projectStacks = new ProjectStacks(null, stack, savedProject.getId());
-            projectStacksRepository.save(projectStacks);
-        }
-
-        // 프로젝트와 사용자 연결 (CAPTAIN 권한 부여)
-        ProjectMember projectMember = new ProjectMember();
-        projectMember.setProject(savedProject);
-        projectMember.setUserId(userId);  // 현재 로그인한 userId
-        projectMember.setAuthority(ProjectMemberAuthirity.CAPTAIN);  // CAPTAIN 권한 부여
-        projectMember.setStatus(ProjectMemberStatus.APPROVE);
-
-
-        projectMemberRepository.save(projectMember);  // ProjectMember 저장
-
-
-        return ProjectDTO.fromEntity(savedProject);
+                .toList();
     }
 
 
@@ -105,17 +135,34 @@ public class ProjectServiceImpl implements ProjectService {
             throw new RuntimeException("사용자가 인증되지 않았습니다.");
         }
 
-
         String username = authentication.getName();
+        User user = userRepository.findByUsername(username);
 
-
-        if (!userRepository.existsByUsername(username)) {
+        if (user == null) {
             throw new RuntimeException("사용자를 찾을 수 없습니다: " + username);
         }
 
-
-        User user = userRepository.findByUsername(username);
         return user.getId();
+    }
+
+
+    private List<ProjectMemberAuthirity> extractProjectAuthorities(Long userId, List<Long> projectIds) {
+        List<ProjectMember> userProjects = projectMemberRepository.findByUserId(userId);
+
+        if (userProjects.isEmpty()) return new ArrayList<>();
+
+        List<ProjectMemberAuthirity> authorities = new ArrayList<>();
+        for (ProjectMember member : userProjects) {
+            projectIds.add(member.getProject().getId());
+            authorities.add(member.getAuthority());
+        }
+
+
+        authorities = authorities.stream()
+                .filter(auth -> auth == ProjectMemberAuthirity.CAPTAIN || auth == ProjectMemberAuthirity.CREW)
+                .collect(Collectors.toList());
+
+        return authorities;
     }
 
 }
